# gpt-automation

./: .gitignore  .gptignore  .gptincludeonly  ARCHITECTURE.md  MANIFEST.in  PLUGIN_SYSTEM_ANALYSIS.md  PROJECT_USER_ANALYSIS.md  README.md  REFACTORING_SUMMARY.md  Taskfile.yml  patch.diff  pyproject.toml  requirements.txt  setup.cfg  setup.py
.claude/: settings.local.json
.gpt/config/: base_config.json
docs-dev/: architecture.md  cli.md  config.md  dev_notes.md  logging_audit.md  manual_testing.md  output_format.md  overview.md  plugins.md
gpt_automation/: .gptignore  .gptincludeonly  Ignore_match.py  arg_file_parser.py  base_plugin.py  config_creator.py  container.py  directory_walker.py  filter_manager.py  filters.py  git_tools.py  ignore_file_parser.py  ignore_walk.py  init_config.py  initializer.py  main.py  plugin_manager.py  plugin_registry.json  profile_manager.py  project_info.py  prompt_generator.py  prompt_manager.py  setup_config.py  setup_settings.py  test.py  test2.py
gpt_automation/application/: __init__.py  generate_prompts.py  initialize_project.py
gpt_automation/commands/: init_command.py  prompt_command.py
gpt_automation/config/: .gptincludeonly  config.py  config_loader.py  config_manager.py  config_resolver.py  paths.py
gpt_automation/docs/: .gptconfig_spec.md  cli_spec.md  config_spec.md  plugin_cli_conf_spec.md  plugin_developer.md  sample_gptignore.md
gpt_automation/domain/: __init__.py
gpt_automation/impl/: .gptincludeonly  Ignore_match.py  app.py  app_context.py  base_plugin.py  directory_walker.py  filters.py  ignore_file_parser.py  logging_utils.py  project_info.py
gpt_automation/infrastructure/: __init__.py
gpt_automation/init_impl/: init_config.py  plugin_config.py
gpt_automation/plugin_impl/: .gptincludeonly  plugin_manager.py
gpt_automation/plugins/: .gptincludeonly  base_plugin.py  ignore_plugin.py  include_only_plugin.py
gpt_automation/resources/: default_base_config.json  default_base_settings.json
gpt_automation/sample_config/: black_list.txt  white_list.txt
gpt_automation/utils/: arg_file_parser.py  git_tools.py  gitignore_parser2.py  pattern_utils.py
src/: ignore_walk.py  main.py  project_info.py
tests/: config.ini  ignore_walk_extras_test.py  ignore_walk_test.py  main_run.py  main_test.py  test_directory_walker.py  test_domain_filters.py  test_gitignore_parser2.py  test_integration_e2e.py  test_settings.py
(+137 files in other folders)
