[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "gpt_automation"
version = "0.1.4"
description = "GPT directory structure and file contents prompt generator"
authors = [
    {name = "Vinit", email = "author@example.com"},
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "pyperclip",
    "igittigitt",
]

[project.scripts]
autogpt = "gpt_automation.main:main"
