[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt_automation"
version = "0.1.11"
description = "GPT directory structure and file contents prompt generator"
authors = [
    {name = "Vinit", email = "author@example.com"},
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "pyperclip==1.8.2",
    "gitignore_parser==0.1.11"
]
[project.urls]
Homepage = "https://github.com/vrocky/gpt-automation/"


[project.scripts]
autogpt = "gpt_automation.main:main"
