[metadata]
name = gpt_automation
version = 0.1.0
description = GPT directory structure and file contents prompt generator
long_description = file: README.md
author = Author Name
author_email = author@example.com
url = https://github.com/username/gpt_automation  # replace with your URL
license = MIT

[options]
python_requires = >=3.6
packages = find:

[options.entry_points]
console_scripts =
    autogpt = src.main:main
