[metadata]
name = gpt_automation
version = 0.1.11
description = GPT directory structure and file contents prompt generator
long_description = file: README.md
author = Vinit
url = https://github.com/vrocky/gpt-automation/
license = APACHE-2.0

[options]
python_requires = >=3.6
packages = find:

[options.entry_points]
console_scripts =
    autogpt = gpt_automation.main:main
